Bug 266406: nsAttrValue has too big default boundries when parsing integers. r+sr=jst